[gd_scene load_steps=3 format=3 uid="uid://b8r05qp0kgvee"]

[ext_resource type="Script" uid="uid://bov5u427lgijf" path="res://map.gd" id="1_c7s6e"]
[ext_resource type="Script" uid="uid://ccyi1uq0fraex" path="res://camera_2d.gd" id="2_wijl4"]

[node name="Map" type="Node2D"]
script = ExtResource("1_c7s6e")
Sun = Color(0.819608, 0.780392, 0.541176, 1)
verticalDivider = 1
horizontalDivider = 1
lineColor = Color(1, 0.470588, 1, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -51.0
offset_top = -13.0
offset_right = 49.0
offset_bottom = 10.0
text = "Loading Map"

[node name="MapRequest" type="HTTPRequest" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_wijl4")
speed = 500
zoomLevel = 600.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ship" type="Button" parent="CanvasLayer/GUI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Show Ship Info"

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="request_completed" from="MapRequest" to="." method="_handleMapRequest"]
[connection signal="pressed" from="CanvasLayer/GUI/Ship" to="." method="_on_ship_pressed"]
